--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -26,8 +26,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   My projects are meant either to help me learn, or to provide a useful design to the open-source hardware community.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username:
+github_username:  AshwinPH
 
 # Build settings
 theme: minima
